rust_writer_procedural/tests/ui/local_finder_fails_if_found_field_isnt_bool_array.stderr
error: Expected a field named found being [bool;N] inside struct.
 --> tests/ui/local_finder_fails_if_found_field_isnt_bool_array.rs:6:8
  |
6 | struct SomeStruct {
  |        ^^^^^^^^^^
